--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "license": "Unlicense",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "base64url": "^3.0.1",
